--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Torch CPU only (bắt buộc đặt trước sentence-transformers)
+torch==2.1.2+cpu
+numpy<2
+
 # Web framework
 fastapi
 uvicorn
@@ -5,11 +9,17 @@ uvicorn
 # Data & ML
 pandas
 faiss-cpu
-sentence-transformers
 scikit-learn
+openpyxl
 
 # AI API client
 requests
 
 # Env management
 python-dotenv
+
+# NLP model
+sentence-transformers
+
+# Chỉ định index cho bản CPU
+--extra-index-url https://download.pytorch.org/whl/cpu
