--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Torch CPU only (bắt buộc đặt trước sentence-transformers)
-torch==2.2.2+cpu -f https://download.pytorch.org/whl/cpu
+torch==2.2.2
 numpy<2
 
 # Web framework
