--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.py",
-      "use": "@vercel/python"
-    }
+"builds": [
+    { "src": "*.py", "use": "@vercel/python" }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.py"
-    }
-  ]
+  "redirects": [
+    { "source": "/", "destination": "/index.py" }
+  ]  
+
 }
