--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ numpy = "<2"
 fastapi = "*"
 uvicorn = "*"
 pandas = "*"
-faiss-cpu = "*"
+faiss-cpu = "==1.7.4"
 scikit-learn = "*"
 openpyxl = "*"
 requests = "*"
